# clp

./: .gitignore  .gitmodules  README.md  Taskfile.yml  deps-tasks.yml  docs-requirements.txt  docs-tasks.yml  fix-header-defines.py  lint-requirements.txt  lint-tasks.yaml  lint-tasks.yml  taskfile.yaml
.github/actions/clp-build-runtime-image/: action.yaml
.github/actions/clp-core-build/: action.yaml
.github/actions/clp-core-build-2/: Dockerfile  action.yaml  focal-build.sh
.github/actions/clp-core-build-and-test/: action.yaml
.github/actions/clp-core-build-containers/: action.yaml
.github/actions/clp-docker-build-push-2/: action.yaml
.github/actions/clp-docker-build-push-action/: action.yaml
.github/actions/run-on-image/: action.yaml
.github/workflows/: clp-artifact-build.yaml  clp-core-build-2.yaml  clp-core-build-macos.yaml  clp-core-build.yaml  clp-dependencies-image-build.yaml  clp-dependency-image-build.yaml  clp-docs.yaml  clp-execution-image-build.yaml  clp-package-build.yaml
components/clp-package-utils/: pyproject.toml
components/clp-package-utils/clp_package_utils/: general.py
components/clp-package-utils/clp_package_utils/scripts/: compress.py  decompress.py  search.py  start_clp.py  stop_clp.py
components/clp-package-utils/clp_package_utils/scripts/native/: compress.py  decompress.py  search.py
components/clp-py-utils/: pyproject.toml
components/clp-py-utils/clp_py_utils/: clp_config.py
components/compression-job-handler/: pyproject.toml
components/compression-job-handler/compression_job_handler/: common.py  compression_db_manager.py  main.py  partition.py
components/core/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
components/core/cmake/: utils.cmake
components/core/cmake/Modules/: FindLibArchive.cmake
components/core/include/: math_utils.hpp  ys_type_utils.hpp
components/core/include/thread_utils/: Thread.hpp
components/core/integration-tests/: compression.py
components/core/src/: BufferedFileReader.cpp  CMakeLists.txt  DictionaryReader.hpp  DictionaryWriter.hpp  EncodedVariableInterpreter.cpp  FileWriter.cpp  GlobalMySQLMetadataDB.cpp  GlobalSQLiteMetadataDB.cpp  Grep.cpp  LogTypeDictionaryEntry.cpp  LogTypeDictionaryEntry.hpp  PageAllocatedVector.hpp  Platform.hpp  Platforms.hpp  Profiler.hpp  Utils.cpp  Utils.hpp  VariableDictionaryEntry.hpp  dictionary_utils.cpp  dictionary_utils.hpp
components/core/src/clo/: ControllerMonitoringThread.hpp
components/core/src/clp/: BufferedFileReader.cpp  Defs.h  MessageParser.cpp  ParsedMessage.cpp  ParsedMessage.hpp  SQLiteDB.hpp  SQLitePreparedStatement.cpp  SQLitePreparedStatement.hpp  TimestampPattern.cpp  TimestampPattern.hpp  TraceableException.hpp  WriterInterface.cpp  WriterInterface.hpp
components/core/src/clp/log_parser/: CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  log-parser.cpp
components/core/src/clp_s/: ArchiveWriter.cpp  ArchiveWriter.hpp  CMakeLists.txt  ColumnWriter.cpp  ColumnWriter.hpp  DictionaryEntry.cpp  DictionaryEntry.hpp  DictionaryWriter.cpp  DictionaryWriter.hpp  JsonConstructor.cpp  SchemaMap.cpp  (+13 more)
components/core/src/thread_utils/: CMakeLists.txt  Thread.cpp
components/core/tests/: test-Array.cpp  test-EncodedVariableInterpreter.cpp  test-FileDescriptorReader.cpp  test-NetworkReader.cpp  test-StreamingCompression.cpp  test-TimestampPattern.cpp  test-Utils.cpp  test-clp_s-delta-encode-log-order.cpp  test-clp_s-range_index.cpp  test-clp_s-search.cpp  test-encoding_methods.cpp  test-ffi_IrUnitHandlerReq.cpp  test-ffi_KeyValuePairLogEvent.cpp  test-ir_encoding_methods.cpp  test-ir_parsing.cpp  test-kql.cpp  test-math_utils.cpp  test-query_methods.cpp  test-sql.cpp  test-string_utils.cpp
components/job-orchestration/: pyproject.toml
components/log-viewer-webui/client/: package-lock.json  package.json  webpack.config.js
components/package-template/src/: README.md
components/webui/: README.md
docs/: gh-workflows.md  requirements.txt  tasks.yml
docs/conf/: conf.py
docs/src/: gh-workflows.md  index.md
docs/src/core/: clp-structured.md  clp-unstructured.md  index.md
docs/src/dev-guide/: building-package.md  ci-gh-packages.md  ci-gh-workflows.md  index.md
docs/src/quick-start/: cluster-setup.md  compression.md  index.md  search.md
docs/src/user-docs/: guides-using-presto.md
docs/src/user-guide/: core-clp.md  core-container.md  index.md  quick-start-cluster-setup.md  quick-start-compression.md  quick-start-overview.md  quick-start-search.md  reference-text-search-syntax.md  resources-datasets.md
integration-tests/: pyproject.toml
integration-tests/tests/: test_clp_s.py  test_clp_text_compression.py  test_clp_text_search.py
taskfiles/: deps.yaml  lint.yaml
tools/deployment/presto-clp/: docker-compose.yaml
tools/docker-images/clp-dependencies-x86-ubuntu-focal/: Dockerfile  build.sh
tools/docker-images/clp-execution-base-bionic/: Dockerfile  build.sh
tools/docker-images/clp-execution-base-focal/: build.sh
tools/docker-images/clp-package-dependencies-ubuntu-jammy/: Dockerfile  build.sh
(+138 files in other folders)
